# SO2_Projekt

./: .gitignore  CMakeLists.txt  README.md  etap2.txt  etap3.txt  main.cpp
objects/: Ball.cpp  Ball.h  Rectangle.cpp  Rectangle.h
utility/: Render.cpp  Render.h  ThreadCreator.cpp  ThreadCreator.h
